# iw4-servers

./: .gitmodules  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.release-build-scripts/: Dockerfile  build-all.sh  build-target.sh  prepare-cross-toolchain.sh
.release-build-scripts/cross-patches/: 24.04-ubuntu-versions.patch
src/: main.rs
