[package]
name = "iw4-servers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iw4-servers"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
tl = "0.7.8"
ureq = { version = "2.10.1", default-features = false, features = ["tls"] }

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
incremental = false
debug = false
debug-assertions = false

[profile.release.package."*"]
inherits = "release"
opt-level = 3
codegen-units = 1
overflow-checks = false
incremental = false
debug = false
debug-assertions = false
