[package]
name = "iw4-servers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iw4-servers"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
rustls = { version = "0.23.12", default-features = false, features = [
  "std",
  "tls12",
] }
rustls-rustcrypto = "0.0.2-alpha"
tl = "0.7.8"
webpki-roots = { version = "0.26.3", default-features = false }

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
incremental = false
debug = false
debug-assertions = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
overflow-checks = false
incremental = false
debug = false
debug-assertions = false
